# split-slideshow

./: .gitignore  README.md  config.example.toml  config.toml~  pyproject.toml  tags
deploy/: split-slideshow.service
src/split_slideshow/: __init__.py  __main__.py  app.py  config.py  panel.py
