[project]
name = "split-slideshow"
version = "0.1.0"
description = "Four-panel random slideshow kiosk for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.5",
]

[project.scripts]
split-slideshow = "split_slideshow.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/split_slideshow"]
