[project]
name = "split-slideshow"
version = "0.1.0"
description = "Four-panel random slideshow kiosk for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    # Modern systems (Python 3.9+): latest pygame-ce from PyPI.
    "pygame-ce>=2.5; python_version >= '3.9'",
    # Raspbian Buster (Python 3.7): newest cp37 build available on piwheels.
    "pygame-ce==2.3.2; python_version < '3.9'",
    # Pillow decodes images so we don't depend on system SDL_image at runtime.
    "pillow",
    # tomllib is stdlib from 3.11; backport for older interpreters.
    "tomli>=1.1.0; python_version < '3.11'",
]

[project.scripts]
split-slideshow = "split_slideshow.__main__:main"

# armv7l (32-bit Pi) has no pygame-ce wheels on PyPI; piwheels provides them.
# Mark the index explicit so it's used ONLY for the pinned Buster build below;
# every other platform resolves pygame-ce from PyPI as normal.
[[tool.uv.index]]
name = "piwheels"
url = "https://www.piwheels.org/simple"
explicit = true

[tool.uv.sources]
pygame-ce = [
    { index = "piwheels", marker = "python_version < '3.9'" },
]
pillow = [
    { index = "piwheels", marker = "python_version < '3.9'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/split_slideshow"]
